Add noIndex frontmatter

--- a/src/content/graphos/basics/routing/cloud-dedicated.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated.mdx
@@ -1,6 +1,7 @@
 ---
 title: Cloud Dedicated
 description: Secure communication to subgraphs using AWS VPC Lattice
+noIndex: true
 ---
 
 To send traffic to your subgraphs running in an AWS VPC without exposing them to the internet, Apollo GraphOS Cloud leverages AWS VPC Lattice. With Lattice, you can define services and share them with the Apollo AWS organization. Apollo GraphOS Cloud can then send traffic directly to your subgraphs without using VPC peering.
