Add preview feature caveat

--- a/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
@@ -3,6 +3,8 @@ title: Secure communication using AWS VPC Lattice
 noIndex: true
 ---
 
+> Cloud Dedicated is currently in [preview](/resources/product-launch-stages#preview). Your questions and feedback are highly valued—don't hesitate to [get in touch](mailto:cloud@apollographql.com).
+
 To send traffic to your subgraphs running in an AWS VPC without exposing them to the internet, Apollo GraphOS Cloud leverages [AWS VPC Lattice](https://aws.amazon.com/vpc/lattice/). With Lattice, you can define services and share them with the Apollo AWS organization. Apollo GraphOS Cloud can then send traffic directly to your subgraphs without using VPC peering.
 
 ```mermaid
