--- a/src/content/graphos/basics/routing/cloud-dedicated/index.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated/index.mdx
@@ -3,6 +3,8 @@ title: Secure communication using AWS VPC Lattice
 noIndex: true
 ---
 
+> Cloud Dedicated is currently in [preview](/resources/product-launch-stages#preview). Your questions and feedback are highly valued—don't hesitate to [get in touch](mailto:cloud@apollographql.com).
+
 Welcome to GraphOS Cloud Dedicated! You're among select customers who are testing out Apollo's newest cloud product.
 These docs include guidelines on how to set up and use Cloud Dedicated. Email cloud@apollographql.com if you have any questions or feedback.
 
