--- a/src/content/graphos/basics/routing/cloud-dedicated/index.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated/index.mdx
@@ -5,7 +5,8 @@ noIndex: true
 
 > Cloud Dedicated is currently in [preview](/resources/product-launch-stages#preview). Your questions and feedback are highly valued—don't hesitate to [get in touch](mailto:cloud@apollographql.com).
 
-Welcome to GraphOS Cloud Dedicated! You're among select customers who are testing out Apollo's newest cloud product.
-These docs include guidelines on how to set up and use Cloud Dedicated. Email cloud@apollographql.com if you have any questions or feedback.
+Apollo GraphOS Cloud Dedicated is designed for teams with production-grade workloads who need control over performance and security. It includes scalable performance, high reliability, and supports advanced router customization. Cloud Dedicated runs on dedicated, pre-provisioned infrastructure that you control and scale. These docs include guidelines on how to set up and use Cloud Dedicated. 
+
+You're among select customers who are testing out Apollo's newest cloud product. Email cloud@apollographql.com if you have any questions or feedback.
 
 - [Secure commnications to your subgraphs with AWS VPC Lattice](./lattice)
