--- a/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
@@ -1,5 +1,6 @@
 ---
 title: Secure communication using AWS VPC Lattice
+description: Route traffic to subgraphs on your AWS VPC
 noIndex: true
 ---
 
@@ -48,7 +49,7 @@ To allow Apollo GraphOS Cloud to send traffic to your private subgraphs, you mus
 
 ### Step 1. Create AWS VPC Lattice target groups
 
-A Lattice **target group** is a collection of targets, or compute resources, that run your application or service. Check out the [AWS documentation](https://docs.aws.amazon.com/vpc-lattice/latest/ug/target-groups.html) to learn more.
+A Lattice **target group** is a collection of targets, or compute resources, that run your application or service. You need to set these up so your Lattice services ... Check out the [AWS documentation](https://docs.aws.amazon.com/vpc-lattice/latest/ug/target-groups.html) to learn more.
 
 1. In the AWS Console for your region of choice, go to the VPC service page:
 - [US East (N. Virginia) — `us-east-1`](https://us-east-1.console.aws.amazon.com/vpc/home?region=us-east-1)
@@ -70,9 +71,9 @@ Congratulations! You created your first AWS VPC Lattice target group. You can re
 - [Europe (Ireland) — `eu-west-1`](https://eu-west-1.console.aws.amazon.com/vpc/home?region=eu-west-1)
 2. In the menu on the left, scroll down and open **Services** in the **VPC Lattice** section.
 3. Click **Create service** in the top right.
-4. In the Identifiers section, give the name, description, and tags of your choice for the service.
-5. In the Custom domain configuration section, make sure you leave the checkbox unselected.
-6. In the Service access section, select the AWS IAM authentication type, and paste the following auth policy. This will ensure that only the AWS Organization for Apollo GraphOS Cloud has the right to send traffic to your subgraphs.
+4. In the **Identifiers** section, give the name, description, and tags of your choice for the service.
+5. In the **Custom domain configuration** section, leave the **Specify a custom domain configuration** checkbox **unselected**.
+6. In the **Service access** section, select the AWS IAM authentication type, and paste the following auth policy. This policy ensures that only the AWS Organization for Apollo GraphOS Cloud can send traffic to your subgraphs.
 
 ```
 {
@@ -93,78 +94,82 @@ Congratulations! You created your first AWS VPC Lattice target group. You can re
 }
 ```
 
-7. (Optional) For extra security, you can audit all the traffic coming to your subgraph by enabling access logs in the Monitoring section.
-8. Once you have configured the service, you can click on Next on the bottom right of the page.
-9. Define routing information to your target groups. Set the protocol to HTTPS and the port to 443.
-For security reasons, we require you to use HTTPS for your listener. This enforces encryption in transit of the traffic between your GraphOS Cloud Router and your Lattice listener.
+7. (Optional) For extra security, you can audit all the traffic coming to your subgraph by enabling access logs in the **Monitoring** section.
+8. Once you have configured the service, you can click **Next** on the bottom right of the page.
+9. Define routing information to your target groups. Set the protocol to **HTTPS** and the port to **443**.
+
+> For security reasons, we require you to use HTTPS for your listener. This enforces encryption in transit of the traffic between your GraphOS Cloud Router and your Lattice listener.
+
 10. If you have multiple target groups, make sure you add a rule for each subgraph.
-11. Click on Next at the bottom right of the page once you are done configuring your listener.
-12. Do NOT pick a VPC Lattice service network. Your subgraphs will integrate with a service network managed by Apollo. Instead, click on the Next button at the bottom right of the page.
-13. Make sure your information are correct and click on Create VPC Lattice service at the bottom right of the page.
+11. Click **Next** at the bottom right of the page once you are done configuring your listener.
+12. Do _NOT_ pick a VPC Lattice service network. Your subgraphs will integrate with a service network managed by Apollo. Instead, click the **Next** button at the bottom right of the page.
+13. Make sure the information you've entered is correct and click **Create VPC Lattice service** at the bottom right of the page.
 
 Congratulations! You have now created a Lattice service for your subgraphs.
 
 ### Step 3. Share the AWS VPC Lattice service with Apollo GraphOS Cloud
 
 1. In the AWS Console for your region of choice, go to the Resource Access Manager service page:
-US East (N. Virginia) — us-east-1
-Europe (Ireland) — eu-west-1
-2. In the menu on the left, click on Resource shares in the Shared by me section.
-3. Click on Create resource share in the top right corner.
-4. In the Resource share name section, give the name to the resource share of your choice.
-5. In the Resources section, select the resource type VPC Lattice Services
+- [US East (N. Virginia) — us-east-1](https://us-east-1.console.aws.amazon.com/ram/home?region=us-east-1)
+- [Europe (Ireland) — eu-west-1](https://eu-west-1.console.aws.amazon.com/ram/home?region=eu-west-1)
+2. In the menu on the left, click **Resource shares** in the **Shared by me** section.
+3. Click **Create resource share** in the top right corner.
+4. In the **Resource share name** section, enter a name for your resource share.
+5. In the **Resources section**, select the resource type **VPC Lattice Services**.
 6. Select all the Lattice services that contain your subgraphs.
 7. (Optional) Set tags for your resource share.
-8. Click on the Next button in the bottom right corner of the page.
-9. Verify that the managed permissions give access to associate the Lattice services with a service network (vpc-lattice:CreateServiceNetworkServiceAssociation and vpc-lattice:GetService). Then click on the Next button in the bottom right of the page.
-10. In the Principals section, select Allow sharing with anyone, with a principal type of AWS account, enter the following value for the account ID: 282421723282, then click on the Add button.
-11. Confirm that 282421723282 is the only selected principal for this resource share, then click on the Next button on the bottom right corner.
-12. Confirm that all the information is correct, then click on Create resource share in the bottom right of the page.
+8. Click the **Next** button in the bottom right corner of the page.
+9. Verify that the managed permissions give access to associate the Lattice services with a service network (`vpc-lattice:CreateServiceNetworkServiceAssociation and vpc-lattice:GetService`). Then click the **Next** button in the bottom right of the page.
+10. In the **Principals** section, select **Allow sharing with anyone**, with a principal type of **AWS account**, enter the following value for the account ID: `282421723282`, then click the **Add** button.
+11. Confirm that `282421723282` is the only selected principal for this resource share, then click the **Next** button on the bottom right corner.
+12. Confirm that all the information is correct, then click **Create resource share** in the bottom right of the page.
 
 Congratulations! You have now shared your Lattice services with Apollo GraphOS Cloud.
 
 The last step now is to associate your resource share with the Apollo Organization account.
 
-> **Note**: You only have 12 hours to associate your resource share, otherwise AWS Resource Access Manager will fail to process the invitation and you will have to restart this step.
+<blockquote>
 
-For security purposes, we recommend you to continue to the next step immediately after creating the resource share. If you see that the resource share was Accepted or Failed in the AWS console and you did not follow step 4 of this guide, please follow the steps to remove private subgraphs.
+⚠️ **Note**:
+- You only have 12 hours to associate your resource share, otherwise AWS Resource Access Manager will fail to process the invitation and you will have to restart this step.
+- For security purposes, we recommend you to continue to the next step immediately after creating the resource share. If you see that the resource share was **Accepted** or **Failed** in the AWS console and you did not follow step 4 of this guide, follow the steps to [remove access to private subgraphs](#remove-access-to-private-subgraphs) and restart this step.
+
+</blockquote>
 
 ### Step 4. Associate your resource share with your Apollo Organization
 
 1. In the AWS Console for your region of choice, go to the Resource Access Manager service page:
-US East (N. Virginia) — us-east-1
-Europe (Ireland) — eu-west-1
-2. In the menu on the left, click on Resource shares in the Shared by me section.
-3. Click on the resource share you created previously.
-4. Copy the ARN for the resource share.
-5. Go to the Apollo Studio.
-6. Click on the Settings tab at the top of the screen.
-
-The rest of this section is intentionally left blank for the moment.
+- [US East (N. Virginia) — us-east-1](https://us-east-1.console.aws.amazon.com/ram/home?region=us-east-1)
+- [Europe (Ireland) — eu-west-1](https://eu-west-1.console.aws.amazon.com/ram/home?region=eu-west-1)
+2. In the menu on the left, click **Resource shares** in the **Shared by me** section.
+3. Click the resource share you created in the previous step.
+4. Copy the **ARN** for the resource share.
+5. Go to the [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content).
+6. Click the **Settings** tab at the top of the screen.
 
 ## Removing access to private subgraphs
 
-Please keep in mind that any existing supergraph that sends traffic to your private subgraphs will stop working once you remove access for Apollo GraphOS Cloud.
+Keep in mind that any existing supergraph that sends traffic to your private subgraphs will stop working once you remove access for Apollo GraphOS Cloud.
 
 ### Remove resource shares
 
 1. In the AWS Console for your region of choice, go to the Resource Access Manager service page:
-US East (N. Virginia) — us-east-1
-Europe (Ireland) — eu-west-1
-2. Click on Resource shares in the Shared by me section of the menu on the left.
-3. Select the resource share(s) associated with Apollo GraphOS Cloud and click on the Delete button in the top right corner.
-4. Click on Delete on the popup modal.
+- [US East (N. Virginia) — us-east-1](https://us-east-1.console.aws.amazon.com/ram/home?region=us-east-1)
+- [Europe (Ireland) — eu-west-1](https://eu-west-1.console.aws.amazon.com/ram/home?region=eu-west-1)
+2. In the menu on the left, click **Resource shares** in the **Shared by me** section.
+3. Select the resource share(s) associated with Apollo GraphOS Cloud and click the **Delete** button in the top right corner.
+4. Click **Delete** in the popup modal.
 
 ### Remove service network associations
 
 1. In the AWS Console for your region of choice, go to the VPC service page:
-US East (N. Virginia) — us-east-1
-Europe (Ireland) — eu-west-1
-2. In the menu on the left, scroll down and click on Services in the VPC Lattice section.
-3. Click on the name of the Lattice service.
-4. In the Service network associations, select the graphos-cloud service name.
-5. Click on the Actions button in the top right of that section, and click on Delete network associations.
-6. Follow the confirmation instructions and click on Delete.
+- [US East (N. Virginia) — us-east-1](https://us-east-1.console.aws.amazon.com/ram/home?region=us-east-1)
+- [Europe (Ireland) — eu-west-1](https://eu-west-1.console.aws.amazon.com/ram/home?region=eu-west-1)
+2. In the menu on the left, scroll down and open **Services** in the **VPC Lattice** section.
+3. Click the name of the Lattice service you want to disconnect.
+4. In the **Service network associations**, select the **graphos-cloud** service name.
+5. Click the **Actions** button in the top right of that section, and click **Delete network associations**.
+6. Follow the confirmation instructions and click **Delete**.
 
 Deleting the network association can take a few seconds. Once the network association is deleted, Apollo GraphOS Cloud cannot contact your subgraphs anymore.
 
