--- a/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
@@ -54,17 +54,18 @@ A Lattice **target group** is a collection of targets, or compute resources, tha
 1. In the AWS Console for your region of choice, go to the VPC service page:
 - [US East (N. Virginia) — `us-east-1`](https://us-east-1.console.aws.amazon.com/vpc/home?region=us-east-1)
 - [Europe (Ireland) — `eu-west-1`](https://eu-west-1.console.aws.amazon.com/vpc/home?region=eu-west-1)
+
 2. In the menu on the left, scroll down and open **Target groups** in the **VPC Lattice** section.
 
 <img class="screenshot" alt="AWS VPC service page left menu" src="../../../img/cloud-dedicated/vpc-lattice-menu.jpg" />
 
 3. Click **Create target group** on the top right.
 
-<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/create-target-group.jpg" width="500" />
+<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/create-target-group.jpg" />
 
 4. In the **Basic configuration** section, set the properties that match your subgraph resources.
 
-<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/target-group-configuration.jpg" width="500" />
+<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/target-group-configuration.jpg" />
 
 5. (Optional) If you are using a target type with health checks, make sure you configure your health checks correctly or Lattice will not be able to send traffic to your subgraphs.
 
@@ -80,7 +81,7 @@ A Lattice **target group** is a collection of targets, or compute resources, tha
 
 8. Click **Create target group** in the bottom right corner of the page.
 
-<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/create-target-group.jpg" />
+<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/create-target-group-final.jpg" />
 
 Congratulations! You created a AWS VPC Lattice target group. Repeat this process for each different resource that you want to share with Apollo GraphOS Cloud.
 
@@ -90,9 +91,21 @@ Congratulations! You created a AWS VPC Lattice target group. Repeat this process
 - [US East (N. Virginia) — `us-east-1`](https://us-east-1.console.aws.amazon.com/vpc/home?region=us-east-1)
 - [Europe (Ireland) — `eu-west-1`](https://eu-west-1.console.aws.amazon.com/vpc/home?region=eu-west-1)
 2. In the menu on the left, scroll down and open **Services** in the **VPC Lattice** section.
+
+<img class="screenshot" alt="AWS VPC service page left menu" src="../../../img/cloud-dedicated/vpc-lattice-menu.jpg" />
+
 3. Click **Create service** in the top right.
+
+<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/create-service.jpg" />
+
 4. In the **Identifiers** section, give the name, description, and tags of your choice for the service.
+
+<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/service-identifiers.jpg" />
+
 5. In the **Custom domain configuration** section, leave the **Specify a custom domain configuration** checkbox **unselected**.
+
+<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/custom-domain.jpg" />
+
 6. In the **Service access** section, select the AWS IAM authentication type, and paste the following auth policy. This policy ensures that only the AWS Organization for Apollo GraphOS Cloud can send traffic to your subgraphs.
 
 ```
@@ -114,16 +127,35 @@ Congratulations! You created a AWS VPC Lattice target group. Repeat this process
 }
 ```
 
+<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/service-access-policy.jpg" />
+
 7. (Optional) For extra security, you can audit all the traffic coming to your subgraph by enabling access logs in the **Monitoring** section.
+
 8. Once you have configured the service, you can click **Next** on the bottom right of the page.
+
+<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/service-monitoring.jpg" />
+
 9. Define routing information to your target groups. Set the protocol to **HTTPS** and the port to **443**.
 
 > For security reasons, we require you to use HTTPS for your listener. This enforces encryption in transit of the traffic between your GraphOS Cloud Router and your Lattice listener.
 
+<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/http-listener.jpg" />
+
 10. If you have multiple target groups, make sure you add a rule for each subgraph.
+
+<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/service-rules.jpg" />
+
 11. Click **Next** at the bottom right of the page once you are done configuring your listener.
+
+<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/listener-complete.jpg" />
+
 12. Do _NOT_ pick a VPC Lattice service network. Your subgraphs will integrate with a service network managed by Apollo. Instead, click the **Next** button at the bottom right of the page.
+
+<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/service-network.jpg" />
+
 13. Make sure the information you've entered is correct and click **Create VPC Lattice service** at the bottom right of the page.
+
+<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/create-service-final.jpg" />
 
 Congratulations! You have now created a Lattice service for your subgraphs.
 
@@ -132,17 +164,50 @@ Congratulations! You have now created a Lattice service for your subgraphs.
 1. In the AWS Console for your region of choice, go to the Resource Access Manager service page:
 - [US East (N. Virginia) — us-east-1](https://us-east-1.console.aws.amazon.com/ram/home?region=us-east-1)
 - [Europe (Ireland) — eu-west-1](https://eu-west-1.console.aws.amazon.com/ram/home?region=eu-west-1)
+
 2. In the menu on the left, click **Resource shares** in the **Shared by me** section.
+
+<img class="screenshot" alt="AWS VPC service page left menu" src="../../../img/cloud-dedicated/vpc-lattice-menu.jpg" />
+
 3. Click **Create resource share** in the top right corner.
+
+<img class="screenshot" alt="AWS VPC shared resources page" src="../../../img/cloud-dedicated/create-resource-share.jpg" />
+
 4. In the **Resource share name** section, enter a name for your resource share.
+
+<img class="screenshot" alt="AWS VPC shared resources page" src="../../../img/cloud-dedicated/resource-share-name.jpg" />
+
 5. In the **Resources section**, select the resource type **VPC Lattice Services**.
+
+<img class="screenshot" alt="AWS VPC shared resources page" src="../../../img/cloud-dedicated/resource-share-name.jpg" />
+
 6. Select all the Lattice services that contain your subgraphs.
+
+<img class="screenshot" alt="AWS VPC shared resources page" src="../../../img/cloud-dedicated/resource-selection.jpg" />
+
 7. (Optional) Set tags for your resource share.
+
+<img class="screenshot" alt="AWS VPC shared resources page" src="../../../img/cloud-dedicated/resource-tags.jpg" />
+
 8. Click the **Next** button in the bottom right corner of the page.
+
+<img class="screenshot" alt="AWS VPC shared resources page" src="../../../img/cloud-dedicated/resource-tags-next.jpg" />
+
 9. Verify that the managed permissions give access to associate the Lattice services with a service network (`vpc-lattice:CreateServiceNetworkServiceAssociation and vpc-lattice:GetService`). Then click the **Next** button in the bottom right of the page.
+
+<img class="screenshot" alt="AWS VPC shared resources page" src="../../../img/cloud-dedicated/managed-permissions.jpg" />
+
 10. In the **Principals** section, select **Allow sharing with anyone**, with a principal type of **AWS account**, enter the following value for the account ID: `282421723282`, then click the **Add** button.
+
+<img class="screenshot" alt="AWS VPC shared resources page" src="../../../img/cloud-dedicated/resource-principal.jpg" />
+
 11. Confirm that `282421723282` is the only selected principal for this resource share, then click the **Next** button on the bottom right corner.
+
+<img class="screenshot" alt="AWS VPC shared resources page" src="../../../img/cloud-dedicated/resource-principal-confirmation.jpg" />
+
 12. Confirm that all the information is correct, then click **Create resource share** in the bottom right of the page.
+
+<img class="screenshot" alt="AWS VPC shared resources page" src="../../../img/cloud-dedicated/create-resource-share-final.jpg" />
 
 Congratulations! You have now shared your Lattice services with Apollo GraphOS Cloud.
 
@@ -162,8 +227,17 @@ The last step now is to associate your resource share with the Apollo Organizati
 - [US East (N. Virginia) — us-east-1](https://us-east-1.console.aws.amazon.com/ram/home?region=us-east-1)
 - [Europe (Ireland) — eu-west-1](https://eu-west-1.console.aws.amazon.com/ram/home?region=eu-west-1)
 2. In the menu on the left, click **Resource shares** in the **Shared by me** section.
+
+<img class="screenshot" alt="AWS VPC service page left menu" src="../../../img/cloud-dedicated/shared-by-me.jpg" />
+
 3. Click the resource share you created in the previous step.
+
+<img class="screenshot" alt="AWS VPC resource share page" src="../../../img/cloud-dedicated/select-resource-share.jpg" />
+
 4. Copy the **ARN** for the resource share.
+
+<img class="screenshot" alt="AWS VPC resource share page" src="../../../img/cloud-dedicated/resource-share-summary.jpg" />
+
 5. Go to the [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content).
 6. Click the **Settings** tab at the top of the screen.
 
@@ -177,8 +251,16 @@ Keep in mind that any existing supergraph that sends traffic to your private sub
 - [US East (N. Virginia) — us-east-1](https://us-east-1.console.aws.amazon.com/ram/home?region=us-east-1)
 - [Europe (Ireland) — eu-west-1](https://eu-west-1.console.aws.amazon.com/ram/home?region=eu-west-1)
 2. In the menu on the left, click **Resource shares** in the **Shared by me** section.
+
+<img class="screenshot" alt="AWS VPC service page left menu" src="../../../img/cloud-dedicated/vpc-lattice-menu.jpg" />
+
 3. Select the resource share(s) associated with Apollo GraphOS Cloud and click the **Delete** button in the top right corner.
+
+<img class="screenshot" alt="AWS VPC resource share page" src="../../../img/cloud-dedicated/create-resource-share.jpg" />
+
 4. Click **Delete** in the popup modal.
+
+<img class="screenshot" alt="AWS VPC resource share page" src="../../../img/cloud-dedicated/delete-resource-share.jpg" />
 
 ### Remove service network associations
 
@@ -186,10 +268,24 @@ Keep in mind that any existing supergraph that sends traffic to your private sub
 - [US East (N. Virginia) — us-east-1](https://us-east-1.console.aws.amazon.com/ram/home?region=us-east-1)
 - [Europe (Ireland) — eu-west-1](https://eu-west-1.console.aws.amazon.com/ram/home?region=eu-west-1)
 2. In the menu on the left, scroll down and open **Services** in the **VPC Lattice** section.
+
+<img class="screenshot" alt="AWS VPC service page left menu" src="../../../img/cloud-dedicated/vpc-lattice-menu.jpg" />
+
 3. Click the name of the Lattice service you want to disconnect.
+
+<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/select-lattice-service.jpg" />
+
 4. In the **Service network associations**, select the **graphos-cloud** service name.
+
+<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/graphos-service.jpg" />
+
 5. Click the **Actions** button in the top right of that section, and click **Delete network associations**.
+
+<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/delete-network-associations.jpg" />
+
 6. Follow the confirmation instructions and click **Delete**.
+
+<img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/delete-network-associations-final.jpg" />
 
 Deleting the network association can take a few seconds. Once the network association is deleted, Apollo GraphOS Cloud cannot contact your subgraphs anymore.
 
@@ -197,7 +293,7 @@ Deleting the network association can take a few seconds. Once the network associ
 
 #### I've added a new service to my resource share, but it doesn't appear in my private subgraphs. How can I fix this?
 
-Apollo GraphOS Cloud does not automatically scan your resource shares for new Lattice services. If you add a service, you can manually trigger a scan by going to your Apollo Organization settings page and clicking on the Rescan subgraphs button.
+Apollo GraphOS Cloud does not automatically scan your resource shares for new Lattice services. If you add a service, you can manually trigger a scan by going to your Apollo Organization settings page and clicking on the **Rescan subgraphs** button.
 
 #### I want to use AWS VPC Lattice within my own organization. Can I still use Lattice for private subgraphs?
 
