--- a/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
@@ -238,8 +238,159 @@ The last step now is to associate your resource share with the Apollo Organizati
 
 <img class="screenshot" alt="AWS VPC resource share page" src="../../../img/cloud-dedicated/resource-share-summary.jpg" />
 
-5. Go to the [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content).
-6. Click the **Settings** tab at the top of the screen.
+5. Go to [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content).
+6. Click the **Create New Graph** tab at the top right of the screen.
+
+### If this is your first private subgraph:
+1. Follow the onboarding steps to create a graph with a new private subgraph.
+
+<img
+  className="screenshot"
+  alt="Onboarding a new private supergraph"
+  src="../../img/cloud-dedicated/onboard-private-supergraph.jpg"
+  width="500"
+/>
+
+2. On the **GraphQL Endpoint** step, select the link `My endpoint is not directly accessible` at the bottom of the page.
+
+<img
+  className="screenshot"
+  alt="Select private subgraph option"
+  src="../../img/cloud-dedicated/select-private-subgraph-option.jpg"
+  width="500"
+/>
+
+3. Choose the backend Cloud Provider you want to use for your private subgraph, and choose the region where your subgraph should be provisioned.
+
+> All private subgraphs in a GraphOS Cloud Router must be in the same region.
+
+<img
+  className="screenshot"
+  alt="Choosing a backend Cloud Provider"
+  src="../../img/cloud-dedicated/choose-cloud-provider-region.jpg"
+  width="500"
+/>
+
+4. In the next step, paste the ARN of the resource share you created and copied from your AWS Console, then press the **Link my Resource** button. Press the **Next** button to continue.
+
+<img
+  className="screenshot"
+  alt="Linking a Lattice resource"
+  src="../../img/cloud-dedicated/link-lattice-resource.jpg"
+  width="500"
+/>
+
+5. From the dropdown menu, select the Lattice service that you would like to connect to your GraphOS Router. A default path of `/api/graphql` is automatically added to the URL. You can change this path if you want to.
+
+<img
+  className="screenshot"
+  alt="Selecting a private Lattice service"
+  src="../../img/cloud-dedicated/select-private-lattice-service.jpg"
+  width="500"
+/>
+
+6. Add a **Service Name** that will describe your Lattice service. This name will be used to identify your Lattice service in the GraphOS Studio UI.
+
+<img
+  className="screenshot"
+  alt="Adding a Service Name"
+  src="../../img/cloud-dedicated/add-lattice-service-name.jpg"
+  width="500"
+/>
+
+7. Paste the GraphQL schema for this subgraph in the **Schema** field.  You can also upload a schema file by clicking the **Upload** button.
+
+> Why Do You Need to Provide the GraphQL Schema?
+When your AWS resource is set to private, it isn't accessible by external services by default. This ensures a high level of security for your data, but it also means extra steps are needed to enable communication between your resource and our system. We need to know the schema of your GraphQL API so that we can generate the correct queries and mutations to send to your subgraph.
+
+<img
+  className="screenshot"
+  alt="Adding a private schema"
+  src="../../img/cloud-dedicated/upload-private-schema.jpg"
+  width="500"
+/>
+
+8. On the next step, update the ID and the name of the Supergraph that you want to add this private subgraph to. An ID and name are automatically generated based on your organization's name, but you can change both to suit your needs.
+
+<img
+  className="screenshot"
+  alt="Configuring a private supergraph"
+  src="../../img/cloud-dedicated/configure-private-supergraph.jpg"
+  width="500"
+/>
+
+9. To finish, click the **Create GraphOS Router** button.
+
+<img
+  className="screenshot"
+  alt="Pressing the Create GraphOS Router button"
+  src="../../img/cloud-dedicated/create-graphos-router.jpg"
+  width="500"
+/>
+
+Congratulations! You have now created a GraphOS Cloud Router with a private subgraph.
+
+### If you are adding this service to an existing graph:
+1. Go to the **Subgraphs** tab of your existing graph.
+
+<img
+  className="screenshot"
+  alt="Visiting the Subgraphs tab"
+  src="../../img/cloud-dedicated/visit-subgraphs-tab.jpg"
+  width="500"
+/>
+
+2. Click the **Add a Subgraph** button on the right of the page.
+
+<img
+  className="screenshot"
+  alt="Clicking the Add a Subgraph button"
+  src="../../img/cloud-dedicated/add-private-subgraph.jpg"
+  width="500"
+/>
+
+3. In the modal, select the **Private** option, then select the AWS service you want to add from the dropdown menu. 
+
+<img
+  className="screenshot"
+  alt="Selecting a private service from existing services"
+  src="../../img/cloud-dedicated/select-private-service.jpg"
+  width="500"
+/>
+
+4. A default path of `/api/graphql` is automatically added to the URL. You can change this path if you want to.
+
+<img
+  className="screenshot"
+  alt="Add a url path for your private subgraph"
+  src="../../img/cloud-dedicated/add-private-url-path.jpg"
+  width="500"
+/>
+
+5. Add a **Service Name** that will describe your Lattice service. This name will be used to identify your Lattice service in the GraphOS Studio UI.
+
+<img
+  className="screenshot"
+  alt="Adding a Service Name"
+  src="../../img/cloud-dedicated/add-service-name.jpg"
+  width="500"
+/>
+
+6. Paste the GraphQL schema for this subgraph in the **Schema** field.  You can also upload a schema file by clicking the **Upload** button.
+
+> Why Do You Need to Provide the GraphQL Schema?
+When your AWS resource is set to private, it isn't accessible by external services by default. This ensures a high level of security for your data, but it also means extra steps are needed to enable communication between your resource and our system. We need to know the schema of your GraphQL API so that we can generate the correct queries and mutations to send to your subgraph.
+
+<img
+  className="screenshot"
+  alt="Uploading the GraphQL schema"
+  src="../../img/cloud-dedicated/additional-private-subgraph-schema.jpg"
+  width="500"
+/>
+
+7. To finish, click the **Add Subgraph** button.
+
+Congratulations! You have now added a private subgraph to your GraphOS Cloud Router.
 
 ## Removing access to private subgraphs
 
