--- a/src/content/graphos/delivery/linter-rules.mdx
+++ b/src/content/graphos/delivery/linter-rules.mdx
@@ -459,175 +459,15 @@ These rules flag potential improvements to a supergraph schema [composed](/feder
 
 ### Inconsistent elements
 
-#### `INCONSISTENT_ARGUMENT_PRESENCE`
-
-Indicates that an optional argument (of a field or directive definition) isn't present in all subgraphs and therefore won't be part of the supergraph.
-
-<hr/>
-
-#### `INCONSISTENT_BUT_COMPATIBLE_ARGUMENT_TYPE`
-
-Indicates that an argument type (of a field, input field, or directive definition) doesn't have the exact same type in all subgraphs, but that the types are compatible.
-
-Two types are compatible if one is:
-- a non-nullable version
-- a list version
-- a subtype
-- or a combination of any of these
-
-of the other.
-
-<hr/>
-
-#### `INCONSISTENT_BUT_COMPATIBLE_FIELD_TYPE`
-
-Indicates that a field doesn't have the exact same types in all subgraphs, but that the types are compatible.
-
-Two types are compatible if one is:
-- a non-nullable version
-- a list version
-- a subtype
-- or a combination of any of these
-
-of the other.
-
-<hr/>
-
-#### `INCONSISTENT_DEFAULT_VALUE_PRESENCE`
-
-Indicates that an argument definition (of a field, input field, or directive definition) has a default value in only some of the subgraphs that define the argument.
-
-<hr/>
-
-#### `INCONSISTENT_DESCRIPTION`
-
-Indicates that an element has a description in more than one subgraph, and the descriptions aren't equal.
-
-<hr/>
-
-#### `INCONSISTENT_ENTITY`
-
-Indicates that an object is declared as an entity (has a `@key`) in only some of the subgraphs in which the object is defined.
-
-<hr/>
-
-#### `INCONSISTENT_ENUM_VALUE_FOR_INPUT_ENUM`
-
-Indicates that a value of an enum type definition, that is only used as an input type, hasn't been merged into the supergraph because it's defined in only some of the subgraphs that declare the enum.
-
-<hr/>
-
-#### `INCONSISTENT_ENUM_VALUE_FOR_OUTPUT_ENUM`
-
-Indicates that a value of an enum type definition, that is only used as an output type or is unused, _has_ been merged in the supergraph but is defined in only some of the subgraphs that declare the enum.
-
-<hr/>
-
-#### `INCONSISTENT_EXECUTABLE_DIRECTIVE_LOCATIONS`
-
-Indicates that an executable directive definition is declared with inconsistent locations across subgraphs. (The supergraph schema then uses the intersection of all locations in the supergraph.)
-
-<hr/>
-
-#### `INCONSISTENT_EXECUTABLE_DIRECTIVE_PRESENCE`
-
-Indicates that an executable directive definition is declared in only some of the subgraphs.
-
-<hr/>
-
-#### `INCONSISTENT_EXECUTABLE_DIRECTIVE_REPEATABLE`
-
-Indicates that an executable directive definition is marked repeatable in only some of the subgraphs and won't be repeatable in the supergraph.
-
-<hr/>
-
-#### `INCONSISTENT_INPUT_OBJECT_FIELD`
-
-Indicates that a field of an input object type definition is only defined in some of the subgraphs that declare the input object.
-
-<hr/>
-
-#### `INCONSISTENT_INTERFACE_VALUE_TYPE_FIELD`
-
-Indicates that a field of an interface "value type" (has no `@key` in any subgraph) isn't defined in all the subgraphs that declare the type.
-
-<hr/>
-
-#### `INCONSISTENT_NON_REPEATABLE_DIRECTIVE_ARGUMENTS`
-
-A non-repeatable directive is applied to a schema element in different subgraphs but with arguments that are different.
-
-<hr/>
-
-#### `INCONSISTENT_OBJECT_VALUE_TYPE_FIELD`
-
-Indicates that a field of an object "value type" (has no `@key` in any subgraph) isn't defined in all the subgraphs that declare the type.
-
-<hr/>
-
-#### `INCONSISTENT_RUNTIME_TYPES_FOR_SHAREABLE_RETURN`
-
-Indicates that a @shareable field returns different sets of runtime types in the different subgraphs in which it's defined.
-
-<hr/>
-
-#### `INCONSISTENT_TYPE_SYSTEM_DIRECTIVE_LOCATIONS`
-
-Indicates that an executable directive definition is marked repeatable in only some of the subgraphs and will not be repeatable in the supergraph.
-
-<hr/>
-
-#### `INCONSISTENT_TYPE_SYSTEM_DIRECTIVE_REPEATABLE`
-
-Indicates that a type system directive definition is marked repeatable in only some of the subgraphs that declare the directive and will be repeatable in the supergraph.
-
-<hr/>
-
-#### `INCONSISTENT_UNION_MEMBER`
-
-Indicates that a member of a union type definition is only defined in some of the subgraphs that declare the union.
+<InconsistentCompositionRules />
 
 ### Overridden and unused elements
 
-#### `OVERRIDE_DIRECTIVE_CAN_BE_REMOVED`
-
-Indicates a field with the @override directive no longer exists in a source subgraph, so the directive can be safely removed.
-
-<hr/>
-
-#### `OVERRIDDEN_FIELD_CAN_BE_REMOVED`
-
-Indicates that a field has been overridden by another subgraph. You should consider removing the overriden field to avoid confusion.
-
-<hr/>
-
-#### `UNUSED_ENUM_TYPE`
-
-Indicates that an enum type is defined in some subgraphs but is unused (no field/argument references it). All values from subgraphs defining that enum will be included in the supergraph.
+<OverriddenCompositionRules />
 
 ### Directives
 
-#### `DIRECTIVE_COMPOSITION`
-
-Indicates that an issue was detected when composing custom directives.
-
-<hr/>
-
-#### `MERGED_NON_REPEATABLE_DIRECTIVE_ARGUMENTS`
-
-Indicates a non-repeatable directive has been applied to a schema element in different subgraphs with different arguments and the arguments values were merged using the directive configured strategies.
-
-<hr/>
-
-#### `NO_EXECUTABLE_DIRECTIVE_INTERSECTION`
-
-For an executable directive definition, indicates that no location appears for it in any subgraphs.
-
-<hr/>
-
-#### `FROM_SUBGRAPH_DOES_NOT_EXIST`
-
-Indicates the source subgraph specified by `@override` directive doesn't exist.
+<DirectiveCompositionRules />
 
 ## Other rules
 
