--- a/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
@@ -150,7 +150,7 @@ Congratulations! You created a AWS VPC Lattice target group. Repeat this process
 
 <img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/listener-complete.jpg" />
 
-12. Do _NOT_ pick a VPC Lattice service network. Your subgraphs will integrate with a service network managed by Apollo. Instead, click the **Next** button at the bottom right of the page.
+12. Do _NOT_ select a VPC Lattice service network. Your subgraphs will integrate with a service network managed by Apollo. Instead, click the **Next** button at the bottom right of the page.
 
 <img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/service-network.jpg" />
 
@@ -158,7 +158,7 @@ Congratulations! You created a AWS VPC Lattice target group. Repeat this process
 
 <img class="screenshot" alt="AWS VPC service page" src="../../../img/cloud-dedicated/create-service-final.jpg" />
 
-Congratulations! You have now created a Lattice service for your subgraphs.
+Congratulations! You've now created a Lattice service for your subgraphs.
 
 ### Step 3. Share the AWS VPC Lattice service with Apollo GraphOS Cloud
 
@@ -210,7 +210,7 @@ Congratulations! You have now created a Lattice service for your subgraphs.
 
 <img class="screenshot" alt="AWS VPC shared resources page" src="../../../img/cloud-dedicated/create-resource-share-final.jpg" />
 
-Congratulations! You have now shared your Lattice services with Apollo GraphOS Cloud.
+Congratulations! You've now shared your Lattice services with Apollo GraphOS Cloud.
 
 The last step now is to associate your resource share with the Apollo Organization account.
 
