--- a/src/content/graphos/basics/routing/cloud-dedicated/index.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated/index.mdx
@@ -3,8 +3,11 @@ title: GraphOS Cloud Dedicated
 noIndex: true
 ---
 
-> Cloud Dedicated is currently in [preview](/resources/product-launch-stages#preview). Your questions and feedback are highly valued—don't hesitate to [get in touch](mailto:cloud@apollographql.com).
+> Cloud Dedicated (and these docs) are currently in [alpha](/resources/product-launch-stages/#alpha--beta). Your questions and feedback are highly valued—don't hesitate to [get in touch](mailto:cloud@apollographql.com).
 
-Apollo GraphOS Cloud Dedicated runs on dedicated, pre-provisioned infrastructure that you control and scale. It's designed for teams with production-grade workloads who need control over performance and security. These docs include guidelines on how to set up and use Cloud Dedicated:
+Cloud Dedicated runs on dedicated, pre-provisioned infrastructure that you control and scale. It's designed for teams with production-grade workloads who need control over performance and security.
 
-- [Secure communications to your subgraphs with AWS VPC Lattice](./lattice)
+These docs include guidelines on how to set up and use Cloud Dedicated:
+
+- [Securely communicate with subgraphs on your AWS VPC](./lattice)
+- More topics coming soon!
