Replace "GraphOS Cloud" with "Cloud Dedicated".

--- a/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
@@ -11,7 +11,7 @@ Cloud Dedicated leverages [AWS VPC Lattice](https://aws.amazon.com/vpc/lattice/)
 flowchart LR;
   clients(Clients);
   subgraph "Apollo Cloud";
-    router(["GraphOS <br/> Dedicated"]);
+    router(["Cloud <br/> Dedicated"]);
   end;
   resourceshare["AWS RAM <br/> Resource <br/> Share"]
   subgraph "AWS Virtual Private Cloud"
