Update preview callout

--- a/src/content/graphos/basics/routing/cloud-dedicated/index.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated/index.mdx
@@ -3,7 +3,7 @@ title: Cloud Dedicated
 noIndex: true
 ---
 
-> Cloud Dedicated (and these docs) are currently in [alpha](/resources/product-launch-stages/#alpha--beta). Your questions and feedback are highly valued—don't hesitate to [get in touch](mailto:cloud@apollographql.com).
+> Cloud Dedicated is currently in [alpha](/resources/product-launch-stages/#alpha--beta). Your questions and feedback are highly valued—don't hesitate to [get in touch](mailto:cloud@apollographql.com).
 
 Cloud Dedicated runs on dedicated, pre-provisioned infrastructure that you control and scale. It's designed for teams with production-grade workloads who need control over performance and security.
 
