--- a/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
@@ -3,7 +3,7 @@ title: Securely communicate with subgraphs on your AWS VPC
 noIndex: true
 ---
 
-> Cloud Dedicated (and these docs) are currently in [alpha](/resources/product-launch-stages/#alpha--beta). Your questions and feedback are highly valued—don't hesitate to [get in touch](mailto:cloud@apollographql.com).
+> Cloud Dedicated is currently in [alpha](/resources/product-launch-stages/#alpha--beta). Your questions and feedback are highly valued—don't hesitate to [get in touch](mailto:cloud@apollographql.com).
 
 Cloud Dedicated leverages [AWS VPC Lattice](https://aws.amazon.com/vpc/lattice/) to send traffic to your subgraphs running in an AWS VPC without exposing them to the internet. With Lattice, you can define services and share them with the Apollo AWS organization. Cloud Dedicated can then send traffic directly to your subgraphs without VPC peering.
 
